# monolith

./: Cargo.toml  Makefile  README.md  rustfmt.toml
examples/: hello.rs
monolith_macro_utils/: Cargo.toml
monolith_macro_utils/src/: lib.rs
src/: from_bevy.rs  lib.rs  lock.rs  stump.rs  to_bevy.rs  utils.rs
