workspace = { members = ["monolith_macro_utils"] }

[package]
name = "monolith"
repository = "https://github.com/yunfengzh/monolith"
license = "MIT OR Apache-2.0"
description = "Monolith is a framework based on tokio and bevy."
version = "0.1.0"
edition = "2024"
rust-version = "1.86"

[dev-dependencies]
bevy-inspector-egui = "0.31"
serde_json = "1.0"
num_enum = "0.7"
tokio-stream = "0.1"

[dependencies]
monolith_macro_utils = { version = "0.1", path = "monolith_macro_utils/" }
bevy = { version = "0.16", features = ["serialize", "bevy_mesh_picking_backend"]}
tokio = { version = "1.44", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-condvar = "0.3"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive", "cargo"]}
mockall = "0.13"

[[example]]
name = "hello"
path = "examples/hello.rs"
