[package]
name = "monolith_macro_utils"
repository = "https://github.com/yunfengzh/monolith"
license = "MIT OR Apache-2.0"
description = "Monolith is a framework based on tokio and bevy."
version = "0.1.0"
edition = "2024"
rust-version = "1.86"

[dependencies]
syn = { version = "*", features = ["full"] }
quote = "*"
proc-macro2 = "*"

[lib]
proc-macro = true
